@@ -16,7 +16,7 @@ importFrom(graphics, arrows, axis, barplot, box, clip, matlines, matplot,
 importFrom(Matrix, expm)
 importFrom(methods, as)
 importFrom(utils, getS3method, type.convert, methods, head, tail)
-export(Surv, aeqSurv, aareg, agreg.fit,
+export(Surv, Surv2, aeqSurv, aareg, agreg.fit,
        agexact.fit, attrassign, 
        basehaz, cch, clogit, cipoisson, cluster, concordance, concordancefit, 
        coxph, cox.zph, coxph.control, coxph.detail, coxph.fit,
@@ -39,6 +39,7 @@ export(Surv, aeqSurv, aareg, agreg.fit,
        survConcordance, survConcordance.fit, survfitcoxph.fit)
 S3method('[', aareg)
 S3method('[', Surv)
+S3method('[', Surv2)
 S3method('[', cox.zph)
 S3method('[', coxph.penalty)
 S3method('[', ratetable)
@@ -46,26 +47,37 @@ S3method('[', survfit)
 S3method('[', survfitms)
 S3method('[', tcut)
 S3method(Math, Surv)
+S3method(Math, Surv2)
 S3method(Math, ratetable)
 S3method(Ops, Surv)
+S3method(Ops, Surv2)
 S3method(Ops, ratetable)
 S3method(Summary, Surv)
+S3method(Summary, Surv2)
 S3method(anyDuplicated, Surv)
+S3method(anyDuplicated, Surv2)
 S3method(anova, coxph)
 S3method(anova, coxphlist)
 S3method(anova, survreg)
 S3method(anova, survreglist)
 S3method(as.character, Surv)
+S3method(as.character, Surv2)
 S3method(as.data.frame, Surv)
+S3method(as.data.frame, Surv2)
 S3method(as.integer, Surv)
+S3method(as.integer, Surv2)
 S3method(as.logical, Surv)
+S3method(as.logical, Surv2)
 S3method(as.matrix, ratetable)
 S3method(as.matrix, Surv)
+S3method(as.matrix, Surv2)
 S3method(as.numeric, Surv)
+S3method(as.numeric, Surv2)
 S3method(attrassign, default)
 S3method(attrassign, lm)
 S3method(barplot, Surv)
 S3method(c, Surv)
+S3method(c, Surv2)
 S3method(coef, concordance)
 S3method(coef, coxphms)
 S3method(concordance, formula)
@@ -75,15 +87,21 @@ S3method(concordance, survreg)
 S3method(density, Surv)
 S3method(dim, survfit)
 S3method(duplicated, Surv)
+S3method(duplicated, Surv2)
 S3method(extractAIC,coxph.penal)
 S3method(fitted, coxph)
 S3method(fitted, survreg)
 S3method(format, Surv)
+S3method(format, Surv2)
 S3method(head, Surv)
 S3method(hist, Surv)
+S3method(hist, Surv2)
 S3method(identify, Surv)
+S3method(identify, Surv2)
 S3method(image, Surv)
+S3method(image, Surv2)
 S3method(is.na, Surv)
+S3method(is.na, Surv2)
 S3method(is.na, coxph.penalty)
 S3method(is.na, ratetable)
 S3method(labels, survreg)
@@ -91,6 +109,7 @@ S3method(levels, Surv)
 S3method(levels, tcut)
 S3method(lines, aareg)
 S3method(lines, Surv)
+S3method(lines, Surv2)
 S3method(lines, survexp)
 S3method(lines, survfit)
 S3method(logLik, coxph)
@@ -105,11 +124,13 @@ S3method(model.matrix, survreg)
 S3method(nobs, coxph)
 S3method(nobs, survreg)
 S3method(pairs, Surv)
+S3method(pairs, Surv2)
 S3method(plot, aareg)
 S3method(plot, cox.zph)
 S3method(plot, Surv)
 S3method(plot, survfit)
 S3method(points, Surv)
+S3method(points, Surv2)
 S3method(points, survfit)
 S3method(predict, coxph)
 S3method(predict, coxph.penal)
@@ -117,6 +138,7 @@ S3method(predict, pspline)
 S3method(predict, survreg)
 S3method(predict, survreg.penal)
 S3method(print, Surv)
+S3method(print, Surv2)
 S3method(print, aareg)
 S3method(print, cch)
 S3method(print, clogit)
@@ -150,14 +172,18 @@ S3method(ratetableDate, date)
 S3method(ratetableDate, chron)
 S3method(ratetableDate, default)
 S3method(rep, Surv)
+S3method(rep, Surv2)
 S3method(rep.int, Surv)
+S3method(rep.int, Surv2)
 S3method(rep_len, Surv)
+S3method(rep_len, Surv2)
 S3method(residuals, coxph)
 S3method(residuals, coxph.null)
 S3method(residuals, coxph.penal)
 S3method(residuals, survreg)
 S3method(residuals, survreg.penal)
 S3method(rev, Surv)
+S3method(rev, Surv2)
 S3method(summary, aareg)
 S3method(summary, cch)
 S3method(summary, coxph)
@@ -174,8 +200,11 @@ S3method(survfit, formula)
 S3method(survfit, matrix)
 S3method(survfit, Surv)
 S3method(t, Surv)
+S3method(t, Surv2)
 S3method(tail, Surv)
+S3method(tail, Surv2)
 S3method(text, Surv)
+S3method(text, Surv2)
 S3method(unique, Surv)
 S3method(vcov, cch)
 S3method(vcov, concordance)
